--- a/Number Guessing game/number-guessing-game.html
+++ b/Number Guessing game/number-guessing-game.html
@@ -11,6 +11,13 @@
             padding: 50px;
             width: 50%;
             margin: auto;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .box:hover{
+            transition: 0.3s;
+            box-shadow: 0px -1px 8px #eee;
+            
         }
     </style>
 </head>
@@ -47,16 +54,17 @@
             if (guessCount === 1) {
                 guesses.textContent = "Previous guesses:";
             }
-            guesses.textContent = `${guesses.textContent} ${userGuess}`;
+            guesses.innerHTML = `${guesses.innerHTML} <del>${userGuess}</del>`;
 
             if (userGuess === randomNumber) {
                 lastResult.textContent = "Congratulations! You got it right!";
                 lastResult.style.color = "green";
+                guesses.innerHTML = `${userGuess} is right Guess <br>Attempt No : ${guessCount}`;
                 lowOrHi.textContent = "";
                 setGameOver();
             } else if (guessCount === 10) {
                 lastResult.textContent = "!!!GAME OVER!!!";
-                lowOrHi.textContent = "";
+                lowOrHi.textContent = `Right Answer was ${randomNumber}`;
                 setGameOver();
             } else {
                 lastResult.textContent = "Wrong!";
@@ -79,13 +87,13 @@
                 guessSubmit.disabled = true;
                 resetButton = document.createElement("button");
                 resetButton.textContent = "Start new game";
-                document.body.append(resetButton);
+                document.querySelector('.box').append(resetButton);
                 resetButton.addEventListener("click", resetGame);
                 }
 
                 function resetGame() {
                     guessCount = 1;
-
+                    
                     const resetParas = document.querySelectorAll(".resultParas p");
                     for (const resetPara of resetParas) {
                         resetPara.textContent = "";
