Story Generator Style Improved

--- a/Story Generator/index.html
+++ b/Story Generator/index.html
@@ -18,6 +18,7 @@
 
       div {
         padding-bottom: 20px;
+        
       }
 
       input[type="text"] {
@@ -28,8 +29,11 @@
       p {
         background: #ffc125;
         color: #5e2612;
-        padding: 10px;
+        padding: 20px;
+        border-radius: 5px;
         visibility: hidden;
+        text-align: justify;
+        line-height: 20px;
       }
     </style>
   </head>
